# glalby

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  glalby-temp.rs  go.mod  uniffi.toml
.github/workflows/: build-and-publish-bindings.yml  build-libraries.yaml  gen-bindings-go.yaml  publish-bindings-go.yaml
examples/: Cargo.toml  equal.rs  get-info.rs  make-invoice.rs
glalby/: cgo.go  glalby.c  glalby.go  glalby.h
scripts/: uniffi_bindgen_generate_go.sh
src/: glalby.udl  greenlight_alby_client.rs  lib.rs
tests/: test_generated_bindings.rs
tests/bindings/golang/: go.mod  test_glalby.go
