[package]
name = "glalby"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
rpath = true

[lib]
name = "glalby_bindings"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bip39 = { version = "*", features=["rand_core"] }
gl-client = { git = "https://github.com/Blockstream/greenlight" }
hex = "0.4"
once_cell = "*"
rand = "*"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uniffi = { version = "0.25.0", features = ["build"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }
